refactor game and ac server to use new packet interface (v2); ton of client messages refactored to schema driven packet declaration